--- a/语言学/🥑1368个单词就够了-日英对照.md
+++ b/语言学/🥑1368个单词就够了-日英对照.md
@@ -8,7 +8,7 @@
 
 
 
-### 具体名词：背下来就可以
+### 🥑具体名词：背下来就可以【355个】
 
 #### 有关物的名词
 
@@ -128,403 +128,403 @@
 ##### 植物类
 
 - plant
-  - 
+  - **植物**
 
 - grass
-  - 
+  - **草**
 - tree
-  - 
+  - **木**
 - crop
-  - 
+  - **作物**
 
 ##### 动物类
 
 - animal
-  - 
+  - **動物**
 
 - bird
-  - 
+  - **鳥**
 - cat
-  - 
+  - **猫**
 - dog
-  - 
+  - **犬**
 - horse
-  - 
+  - **馬**
 - rabbit
-  - 
+  - **ウサギ**
 - elephant
-  - 
+  - **ゾウ(象)**
 - bear
-  - 
+  - **熊くま**
 - tiger
   - 
 - lion
-  - 
+  - **ライオン**
 - bull
-  - 
+  - **雄牛**
 - cow
-  - 
+  - **乳牛**
 - pig
-  - 
+  - **ブタ(豚)**
 - chicken
-  - 
+  - **鶏肉、チキン**
 - fish
-  - 
+  - **魚**
 - sheep
-  - 
+  - **羊**
 - monkey
-  - 
+  - **猿**
 - snake
-  - 
+  - **ヘビ(蛇)**
 - reptile
-  - 
+  - **爬虫(はちゆう)**
 
 ##### 昆虫类
 
 - insect
-  - 
+  - **昆虫（こんちゅう）、虫**
 
 - bee
-  - 
+  - **ミツバチ**
 - butterfly
-  - 
+  - **チョウ蝶**
 - spider
-  - 
+  - **クモ**
 
 ##### 其他生物
 
 - bacteria
-  - 
+  - **バクテリア、細菌(さいきん)**
 
 ##### 地点类
 
 - place
-  - 
+  - **場所、所**
 
 - hospital
-  - 
+  - **病院**
 - restaurant
-  - 
+  - **レストラン、料理店、飲食店**
 - hotel
-  - 
+  - **ホテル、旅館**
 - university
-  - 
+  - **大学**
 - factory
-  - 
+  - **工場、製造所**
 - jail
-  - 
+  - **拘置所、刑務所、拘置、投獄、刑務所生活**
 - zoo
-  - 
+  - **動物園**
 - park
-  - 
+  - **公園、競技場**
 - school
-  - 
+  - **学校**
 - store
-  - 
+  - **(小売りの)店、商店、大きな店、雑貨店、デパート**
 - club
-  - 
+  - **クラブ**
 - bar
   - 
 - court
-  - 
+  - **法廷**
 - market
-  - 
+  - **市(いち)、市場(いちば)、(通例、特定の)食料品店、マーケット、(特定の物品・地域の)売買市場(しじよう)**
 - town
-  - 
+  - **町、都会、(いなかに対して)都会、都会の生活、首都**
 - village city
-  - 
+  - **村**
 
 ##### 机构类
 
 - organization
-  - 
+  - **組織体、団体、組合、協会**
 
 - company
-  - 
+  - **会社**
 - charity
   - 
 
 ##### 声音类
 
 - sound
-  - 
+  - **音**
 
 - voice
-  - 
+  - **声**
 - noise
-  - 
+  - **物音、雑音、騒音**
 - music
-  - 
+  - **音楽**
 
 ##### 食品类
 
 - food
-  - 
+  - **食物**
 
 - egg
-  - 
+  - **卵**
 - meat
-  - 
+  - **肉**
 - steak
-  - 
+  - **ステーキ**
 - bread
-  - 
+  - **パン**
 - cake
-  - 
+  - **ケーキ、洋菓子**
 - dessert
-  - 
+  - **デザート**
 - soup
-  - 
+  - **スープ**
 - sandwich
-  - 
+  - **サンドイッチ**
 - noodle
-  - 
+  - **面**
 - pie
-  - 
+  - **パイ**
 - chocolate
-  - 
+  - **チョコレート**
 - sauce
-  - 
+  - **ソース**
 
 ##### 餐饮类
 
 - meal
-  - 
+  - **食事**
 
 - breakfast
-  - 
+  - **朝食**
 - lunch
-  - 
+  - **昼食、ランチ**
 - dinner
-  - 
+  - **ディナー**
 
 ##### 蔬菜类
 
 - vegetable
-  - 
+  - **野菜**
 
 - potato
-  - 
+  - **ジャガイモ(の塊茎)**
 - tomato
-  - 
+  - **トマト**
 - carrot
-  - 
+  - **ニンジン**
 - lettuce
-  - 
+  - **レタス、サラダ菜、チシャ**
 - bean
-  - 
+  - **豆()**
 
 ##### 水果类
 
 - fruit
-  - 
+  - **果物**
 
 - apple
-  - 
+  - **リンゴ**
 - orange
-  - 
+  - **オレンジ**
 - banana
-  - 
+  - **バナナ**
 
 ##### 食材类
 
 - ingredient
-  - 
+  - **成分、原料、(料理の)材料、**
 
 - oil
-  - 
+  - **油**
 - sugar
-  - 
+  - **砂糖**
 - salt
-  - 
+  - **塩、食塩、塩入れ、塩(えん)**
 - butter
-  - 
+  - **バター**
 - cream
-  - 
+  - **クリーム**
 
 ##### 饮料类
 
 - drink
-  - 
+  - **飲む**
 
 - coffee
-  - 
+  - **コーヒー**
 - milk
-  - 
+  - **牛乳、ミルク**
 - tea
-  - 
+  - **茶、お茶、1 杯のお茶、チャ、茶の葉、茶、ティー**
 - juice
-  - 
+  - **ジュース**
 - beer
-  - 
+  - **ビール**
 - wine
-  - 
+  - **ワイン**
 - alcohol
-  - 
+  - **アルコール**
 
 ##### 营养类
 
 - nutrient
-  - 
+  - **栄養物**
 
 - mineral
-  - 
+  - **鉱物(こうぶつ)**
 - vitamin
-  - 
+  - **ビタミン**
 - protein
-  - 
+  - **たんぱく質**
 
 ##### 疾病类
 
 - disease
-  - 
+  - **(人間・動植物の)病気**
 
 - fever
-  - 
+  - **(病気による) 熱、発熱、熱病**
 - flu
-  - 
+  - **インフルエンザ、流感**
 - cancer
-  - 
+  - **がん、がん腫(しゆ)、悪性腫瘍(しゆよう)**
 
 ##### 房屋类
 
 - house
-  - 
+  - **家、家屋、住宅**
 
 - office
-  - 
+  - **(工場と区別して、事務員・店員などが勤めに出る)事務所、オフィス、会社、(弁護士などの)事務室、執務室、診療室、医院、(大学教員の)研究室、…所**
 - room
-  - 
+  - **部屋、室、(ホテルの)部屋**
 - floor
-  - 
+  - **(部屋の)床(ゆか)、板の間、フロア、(建物の)階、(海・洞穴などの)床(とこ)、底**
 - wall
-  - 
+  - **(室内の)壁**
 - window
-  - 
+  - **窓**
 - door
-  - 
+  - **ドア、戸、扉**
 - roof
-  - 
+  - **屋根、屋上**
 - kitchen
-  - 
+  - **台所、キッチン、調理部**
 
 ##### 家具类
 
 - furniture
-  - 
+  - **家具**
 
 - bed
-  - 
+  - **ベッド、寝台**
 - chair
-  - 
+  - **いす**
 - desk
-  - 
+  - **机**
 - table
-  - 
+  - **テーブル、卓**
 - seat
-  - 
+  - **腰かけ、席、座席**
 - couch
-  - 
+  - **カウチ、ソファー**
 
 ##### 服装类
 
 - clothes
-  - 
+  - **着(る)物、衣服、衣類、服**
 
 - shirt
-  - 
+  - **(男子用の)ワイシャツ、(婦人用)シャツ型のブラウス、下着、肌着、シャツ**
 - shoes
-  - 
+  - **靴**
 - cap
-  - 
+  - **帽子**
 - hat
-  - 
+  - **帽子**
 - coat
-  - 
+  - **(外出・防寒用の)コート、(背広・婦人スーツの)上着**
 - dress
-  - 
+  - **服装、衣服**
 - pants
-  - 
+  - **ズボン、パンツ**
 - uniform
-  - 
+  - **制服**
 - suits
-  - 
+  - **スーツ**
 - underwear
-  - 
+  - **肌着、下着**
 - pocket
-  - 
+  - **ポケット**
 - jeans
-  - 
+  - **ジーン**
 - button
-  - 
+  - **ボタン**
 - zip
   - 
 - sock
-  - 
+  - **ソックス**
 
 ##### 首饰类
 
 - jewelry
-  - 
+  - **ジューリー; ジュエリー; 宝飾; 宝石類**
 
 - diamond
-  - 
+  - **ダイヤモンド**
 - ring
-  - 
+  - **指輪**
 
 ##### 化妆品
 
 - cosmetics
-  - 
+  - **化粧用の、 美顔用の**
 
 - perfume
-  - 
+  - **香水**
 - lipstick
-  - 
+  - **リップスティック**
 -  powder
-  - 
+  - **粉、粉末**
 
 ##### 交通类
 
 - transport
-  - 
+  - **(…へ)輸送する、運送する、交通**
 
 -  traffic
-  - 
+  - **(人・車・船・飛行機などの)交通、往来、通行**
 - bicycle
-  - 
+  - **自転車**
 - ship
-  - 
+  - **(大きい)船**
 - boat
-  - 
+  - **ボート**
 - plane
-  - 
+  - **飛行機**
 - train
-  - 
+  - **列車**
 
 ##### 车辆类
 
 - vehicle
-  - 
+  - **(陸上の)乗り物**
 
 - motorcycle
-  - 
+  - **オートバイ**
 - bus
-  - 
+  - **バス**
 - car
-  - 
+  - **自動車**
 - truck
-  - 
+  - **トラック、貨物自動車**
 - brake
-  - 
+  - **ブレーキ**
 - engine
-  - 
+  - **エンジン**
 - gear
-  - 
+  - **ギヤ**
 - tire
-  - 
+  - **タイヤ**
 - wheel
-  - 
+  - **(車の)車輪、ホイール**
 
 ##### 路桥类
 
@@ -544,13 +544,13 @@
   - **装置**
 
 - lock
-  - 
+  - **(かぎ で開閉する)錠**
 - key
-  - 
+  - **かぎ**
 - bell
-  - 
+  - **(玄関などにある押して鳴らす)ベル**
 - scale
-  - 
+  - **定規**
 - tap
   - 
 
@@ -560,47 +560,47 @@
   - **設備、用品、機器、器材**
 
 - shower
-  - 
+  - **シャワーの設備**
 - radio
-  - 
+  - **ラジオ(放送)**
 - telephone
-  - 
+  - **電話**
 - camera
-  - 
+  - **カメラ、写真機、テレビカメラ**
 - computer
-  - 
+  - **コンピューター**
 - TV
-  - 
+  - **テレビ(放送)**
 - fridge
-  - 
+  - **冷蔵庫**
 - video
-  - 
+  - **ビデオ**
 
 ##### 容器类
 
 - container
-  - 
+  - **容器、入れ物、(貨物輸送用の)コンテナ**
 
 - box
-  - 
+  - **(通例ふた付きの長方形の)箱**
 - cup
-  - 
+  - **(紅茶・コーヒー用の、耳付きの)カップ**
 - dish
-  - 
+  - **(全員の料理を盛りつける円形または楕円形の)大皿、盛り皿、**
 - plate
-  - 
+  - **(通例各人用の浅くて丸い)皿、平皿、ひと皿分、皿類、(金銀製の)食器類**
 - bowl
-  - 
+  - **(basin より深く cup より大きい円形の)わん、鉢(はち)**
 - basket
-  - 
+  - **(竹・柳枝などで編んだ)かご、バスケット**
 - tub
   - 
 - sink
   - 
 - pot
-  - 
+  - **ポット**
 - pan
-  - 
+  - **(通例浅く、片手用の長い柄のついた)なべ、鍋**
 
 ##### 材料类
 
@@ -608,113 +608,113 @@
   - **原料、材料**
 
 - cloth
-  - 
+  - **布(地)**
 - paper
-  - 
+  - **紙、新聞、(研究)論文、(小)論文、レポート、答案(用紙)、試験問題、書類、文書、記録**
 - glass
-  - 
+  - **ガラス**
 - plastic
   - **プラスチック(**
 - gold
-  - 
+  - **金**
 - paint
-  - 
+  - **ペンキ、塗料、絵の具、化粧品、(口)紅**
 - chemical
-  - 
+  - **化学の、化学的な、化学作用の**
 
 ##### 日常用品类
 
 - toy
-  - 
+  - **おもちゃ、くだらないもの**
 
 - brush
-  - 
+  - **ブラシ**
 - mirror
-  - 
+  - **鏡**
 - chain
-  - 
+  - **鎖**
 - board
-  - 
+  - **板、黒板**
 - handle
-  - 
+  - **ハンドル、柄**
 - cartoon
-  - 
+  - **アニメ映画、動画**
 - bottle
-  - 
+  - **瓶**
 - wood
-  - 
+  - **木材、木質**
 - clock
-  - 
+  - **時計**
 - knife
-  - 
+  - **ナイフ、小刀、包丁**
 - pen
-  - 
+  - **ペン**
 - book
-  - 
+  - **本**
 - album
-  - 
+  - **アルバム**
 - menu
-  - 
+  - **(レストランなどの)献立表、メニュー**
 - card
-  - 
+  - **カード、券、(絵・装飾をつけて印刷した)あいさつ状、招待状、案内状、賀状、献立表、メニュー、ワインリスト、名刺**
 - envelope
-  - 
+  - **封筒、包み**
 - ticket
-  - 
+  - **切符、入場券、乗車券、(比喩的に)切符**
 - pipe
-  - 
+  - **管、パイプ**
 - tube
-  - 
+  - **管**
 - wire
-  - 
+  - **針金、電線**
 - belt
-  - 
+  - **ベルト、帯**
 - web
   - 
 - film
-  - 
+  - **細い糸**
 - screen
   - 
 - gift
-  - 
+  - **贈り物、寄贈品**
 - channel
   - 
 - alarm
-  - 
+  - **警報、アラーム**
 - electricity
-  - 
+  - **電気**
 - towel
-  - 
+  - **タオル**
 - carpet
-  - 
+  - **じゅうたん**
 - tool
-  - 
+  - **(職人などが手で使用する)道具、工具**
 - junk
-  - 
+  - **ゴミ**
 - fork
-  - 
+  - **(食卓用)フォーク**
 - spoon
-  - 
+  - **スプーン**
 - medicine
-  - 
+  - **薬**
 - drug
-  - 
+  - **薬、薬品、薬剤**
 - pill
-  - 
+  - **丸薬、ピル**
 
 ##### 数量
 
 - couple
-  - 
+  - **(組になっている)二つ**
 
 - double
-  - 
+  - **(数・量・強さなどが) 2 倍の、ダブルの**
 - load
-  - 
+  - **(運搬されるものの意で)荷、積み荷、一荷、一駄、一車**
 - pack
-  - 
+  - **包み**
 - lot
-  - 
+  - **多い、たくさん**
 
 ##### 单位
 
@@ -756,73 +756,73 @@
   - **親**
 
 - daughter
-  - 
+  - **娘**
 - son
-  - 
+  - **息子**
 - father
-  - 
+  - **父、父親、おとうさん**
 - mother
-  - 
+  - **母、母親、おかあさん**
 - brother
-  - 
+  - **兄、弟**
 - sister
-  - 
+  - **姉、妹**
 - husband
-  - 
+  - **夫**
 - wife
-  - 
+  - **妻、女房、細君、主婦、人妻、女**
 - uncle
-  - 
+  - **おじ、おじさん**
 - aunt
-  - 
+  - **おば、おばさん**
 - grandfather
-  - 
+  - **祖父、おじいさん、(男の)祖先**
 - grandmother
-  - 
+  - **祖母、おばあさん、(女の)先祖**
 - role
-  - 
+  - **(俳優の)役、役割、任務、役目、本務**
 
 ##### 社会角色类
 
 - kid
-  - 
+  - **子供、若者、青年**
 
 - child
-  - 
+  - **子供、児童、赤子、赤ん坊**
 - baby
-  - 
+  - **赤ちゃん、赤ん坊**
 - boy
-  - 
+  - **男の子、少年、(大人に対して未成年の)青年、若者**
 - girl
-  - 
+  - **女の子、少女**
 - man
-  - 
+  - **(成人の)男、男子**
 - woman
-  - 
+  - **(成人した)女、婦人、女性**
 - friend
-  - 
+  - **友人、友だち、(わが)友**
 - lady
-  - 
+  - **レディー**
 - gentleman
-  - 
+  - **紳士**
 - boss
-  - 
+  - **社長**
 - customer
-  - 
+  - **顧客、得意先、取引先、(…な)やつ、(…な)人**
 - student
-  - 
+  - **学生、生徒、学者、研究家、(大学・研究所などの)研究生、**
 - neighbor
-  - 
+  - **隣人、近所の人、隣席の人、隣国人**
 - person
-  - 
+  - **人、人間**
 - volunteer
-  - 
+  - **ボランティア**
 - fool
   - 
 - sir
-  - 
+  - **あなた、先生、閣下、お客さん、だんな、君!、おい!、こら!、拝啓、サー…**
 - madam
-  - 
+  - **奥様、お嬢様、…殿、…閣下、拝啓、(一家の)主婦、妻、でしゃばり女、おしゃまな女、売春宿のおかみ**
 
 ##### 职业类
 
@@ -883,122 +883,128 @@
 
 
 
-### 抽象名词：光背下来还不够
+---
+
+
+
+### 🥑抽象名词：光背下来还不够【166个】
 
 ##### 话语类
 
 - words
-  - 
+  - **言葉**
 
 - topic
-  - 
+  - **話題、テーマ、トピック**
 - subject
-  - 
+  - **(議論・研究などの)主題、問題、題目、題材、画題、(写真の)被写体、(学校の)学科、科目、主語、主部**
 - joke
-  - 
+  - **冗談**
 - question
-  - 
+  - **質問、問い、質疑、疑問文、疑問、疑い、可能性、問題**
 - suggestion
-  - 
+  - **提案(すること)**
 - instruction
-  - 
+  - **教授、教育、教え、命令、訓令、指令、指図、(製品などの)使用説明書**
 - permission
+  - **許可、許諾、認可、許し、(…が)許可**
+
 
 ##### 文字类
 
 - document
-  - 
+  - **文書、書類、記録、文献、証書**
 
 - story
-  - 
+  - **物語、話、小説**
 - report
-  - 
+  - **レポート**
 - novel
-  - 
+  - **小説**
 - note
-  - 
+  - **記録、メモ**
 - text
-  - 
+  - **本文**
 - letter
-  - 
+  - **文字、字、手紙**
 - email
-  - 
+  - **eメール；メール；email**
 - blog
-  - 
+  - **ブログ**
 - list
-  - 
+  - **一覧表、表、リスト、目録、名簿**
 - menu
-  - 
+  - **(レストランなどの)献立表、メニュー**
 
 
 - rule
-  - 
+  - **規定、ルール、規則**
 
 - law
-  - 
+  - **法、法律**
 
 - grammar
-  - 
+  - **文法**
 - principle
-  - 
+  - **原理、原則**
 
 ##### 信息类
 
 - information
-  - 
+  - **情報**
 
 - message
-  - 
+  - **メッセージ**
 - news
-  - 
+  - **知らせ、消息、近況、便り、(新聞・ラジオなどの)ニュース**
 - update
-  - 
+  - **(…を)最新のものにする、最新式にする**
 - notice
-  - 
+  - **通知、通報、告知、通知書、告知書、掲示、はり札、びら、(解雇・解約・退職などの)予告、警告**
 - fact
-  - 
+  - **(実際に起こった)事実**
 - detail
   - 
 - evidence
-  - 
+  - **証拠(物件)、物証、証言、証拠**
 - clue
-  - 
+  - **手がかり、糸口**
 - background
-  - 
+  - **(景色・絵画・写真などの)背景**
 - data
-  - 
+  - **データ、資料**
 - sign
-  - 
+  - **(数学・音楽などの)符号、記号、信号、合図、手まね、身ぶり、標識、標示、掲示、看板**
 - knowledge
-  - 
+  - **知(ってい)ること、知識、認識、情報、熟知、精通、学識、見聞、学問**
 
 ##### 状态类
 
 - state
-  - 
+  - **状態、様子**
 
 - condition
-  - 
+  - **(人・もの・財政などの)状態、健康状態、体調、コンディション、状態、(周囲の)状況、事情、身分、地位、境遇**
 - environment
-  - 
+  - **環境、周囲、四囲の状況、自然環境**
 
 
 - situation
-  - 
+  - **(町・建物などの)位置、場所、立地条件、(人が置かれた)立場、境遇、(事の)状態、情勢、事態、(物語・劇などの)急場、きわどい場面**
 
 - mess
-  - 
+  - **混乱、めちゃくちゃ**
 
 - balance
-  - 
+  - **天秤(てんびん)、はかり、天秤座、釣り合い、平均、均衡、調和**
 - peace
-  - 
+  - **平和、泰平、治安、秩序、平穏、無事、安心、平安、静けさ、沈黙**
 - emergency
-  - 
+  - **非常時、緊急、有事**
 - chance
-  - 
+  - **機会、好機、チャンス、(…が)機会**
 - opportunity
-  - 
+  - **(…の)(適切な)機会、好機、機会**
 
 ##### 行为类
 
@@ -1088,10 +1094,13 @@
 
 
 - insurance
-  - 
+  - **保険**
 - account
-  - 
+  - **口座**
 - engagement
+
+  - **契約**
+
 
 ##### occasion：
 
@@ -1241,11 +1250,11 @@
 - privilege
   - 
 - mistake
-  - 
+  - **間違い、誤り、ミス、思い違い**
 - risk
-  - 
+  - **危険、恐れ**
 - advantage
-  - 
+  - **有利な点、強み、長所**
 - benefit
   - 
 - problem
@@ -1294,7 +1303,7 @@
 
 
 
-### 构成类名词：你的外在与内在
+### 🥑构成类名词：你的外在与内在【65个】
 
 ##### 核心词
 
@@ -1312,7 +1321,9 @@
 - base
   - 
 - core
-- 
+
+  - 
+
 
 ##### 身体
 
@@ -1436,9 +1447,9 @@
 - intelligence
   - 
 - memory
-  - 
+  - **記憶**
 - skill
-  - 
+  - **技能、技術**
 
 ##### 动物
 
@@ -1465,13 +1476,13 @@
 ##### 其他
 
 - whole
-    - 
+    - **全体の、すべての、全…**
 
 
 - rest
   - 
 - half
-  - 
+  - **半分、2 分の 1**
 
 
 关于构成类名词的解读
@@ -1482,14 +1493,14 @@
 
 
 
-### 属性类名词：你的状态
+### 🥑属性类名词：你的状态【70个】
 
 #### 静态属性
 
 ##### 形状
 
 - shape
-    - 
+    - **形、形状、かっこう、(抽象的な)形、本来の形、姿、様子**
 
 
 - appearance
@@ -1702,115 +1713,121 @@
 - process
   - 
 
-
+```java
 关于属性类名词的解读
 
 总单词量：70个
 
 类别：12个
+```
 
 
 
-### 单纯型动词：广交天下朋友
+
+
+### 🥑单纯型动词：广交天下朋友【114个】
 
 #### 本源词
 
 - be
-    - 
+    - **(…で)ある、です、ある、いる、(…に)なる、(時間が)かかる、(…が)ある、存在する、起こる、(時間が)かかる(だろう)**
 
 
 - go
-  - 
+  - **行く**
 - come
-  - 
+  - **来る**
 - make
-  - 
+  - **作る**
 
 #### 归属
 
 拥有某物　
 
 - have
-  - 
+  -  **持っている、(…を)持っている**
 
 得到某物　
 
 - get
-  - 
+  - **受け(取)る、(要求・懇願によって)もらう、得る、持つようになる、(…で)受ける、身につける、(うまく)する、してもらう、される、手に入れる**
 
 给出某物　
 
 - give
-  - 
+  - **与える :、あげる、(…に)提供する、授ける、(引き)渡す、(手)渡す、出す、施す、(…を)引き渡す、預ける**
 
 拿到某物　
 
 - take
-  - 
+  - **(手などで)取る、(…を)取る、つかむ、(…を)抱く**
 
 #### 终点位置
 
 使到达某一位置　
 
 - put
-  - 
+  - **置く、(ある場所に)置く**
 
 使轻轻到达某一位置　
 
 - lay
-    - 
+    - **置く**
 
 
 - place
-  - 
+  - **置く**
 
 
 使从其他位置到达说话者位置　
 
 - bring
-  - 
+  - **(ある場所へ)持ってくる、連れてくる、持ってくる、(ある場所へ)連れてくる**
 
 使从说话者位置到达其他位置　
 
 - send
-  - 
+  - **送る**
 
 使位置暂停改变　
 
 - hold
-  - 
+  - **(手に)持つ**
 
 使位置保持不变　
 
 - keep
-  - 
+  - **守る**
 
 位置保持不变　
 
 - stay
-    - 
+    - **とどまる、(場所に)とどまる**
 
 
 - hang
-  - 
+  - **かける**
 - settle
+
+  - **解決する**
+
 
 #### 相互位置
 
 一事物到另一事物上面　
 
 - cover
-  - 
+  - **(…を)(…で)おおう、かぶせる**
 
 一事物到另一事物下面　
 
 - support
-  - 
+  - **支える、支援する**
 
 两事物混合　
 
 - mix
-  - 
+  - **混ぜる**
 
 两事物互换　
 
@@ -2182,38 +2199,41 @@
 
 
 
-### 世故型动词：朋友少，但效率高
+### 🥑世故型动词：朋友少，但效率高【219个】
 
 #### 看
 
 - find
-    - 
+    - **見つける**
 
 
 - watch
-  - 
+  - **見る**
 - observe
-  - 
+  - **観察する**
 - ignore
-  - 
+  - **無視する**
 - search
-  - 
+  - **捜す**
 - show
+
+  - **見せる、示す、(…が)見せる**
+
 
 #### 说
 
 ##### 意见：
 
 - agree
-    - 
+    - **同意する 賛成する、応ずる、同意する**
 
 
 - cancel
-  - 
+  - **取り消す、キャンセルする、解消する、中止する**
 - let
-  - 
+  - **許す :、させる**
 - allow
-  - 
+  - **許す**
 
 ##### 告诉：
 
@@ -2230,6 +2250,9 @@
 - express
   - 
 - confirm
+
+  - 
+
 
 ##### 要求：
 
@@ -2263,6 +2286,9 @@
   - 
 - threat
 
+  - 
+
+
 ##### 其他：
 
 - answer
@@ -2279,98 +2305,98 @@
 ##### 想
 
 - consider
-    - 
+    - **(ある決定・理解のために)よく考える、熟考する、考察する、検討する、よく考える、考える、(…を)みなす、(…を)考える、思う、考慮に入れる**
 
 
 - guess
-  - 
+  - **(当て推量で)(…を)言い当てる、解き当てる、(十分知らないで、また十分考えないで)推測する、(…を)推測する、推測する、見当つける、言い当てる、(…を)(…に)推測する、思う**
 - deserve
-  - 
+  - **(…の)価値がある、(…を)受けるに足る、価値がある**
 - offer
   - 
 
 
 - doubt
-    - 
+    - **疑う**
 
 
 - suspect
-  - 
+  - **怪しいと思う**
 - trust
-  - 
+  - **信頼**
 - forget
-  - 
+  - **忘れる**
 - remember
-  - 
+  - **思い出す、(…を)思い出す、思い起こす、(…を)覚えている**
 - imagine
-  - 
+  - **想像する、(…を)想像する、心に描く**
 - mean
-  - 
+  - **(…の)意味を表わす、意味する、等しい、示す**
 
 
 - learn
-    - 
+    - **(勉強・練習などによって)習い覚える、習得する、学ぶ、覚える、(経験などによって)(…を)身につける、(悟って)できるようになる、(…を)暗記する、記憶する、(…を)(聞いて)知る、聞く**
 
 
 - understand
-  - 
+  - **理解する、意味を知る、(…が)わかる、言うことを理解する、通じている、明るい、知っている、気持ちがわかる、わかる、聞いて知っている**
 - wonder
-  - 
+  - **驚異、驚嘆、驚き**
 
 
 - decide
-    - 
+    - **決心する、決意する、決定する、決める、解決する、判決を下す、(…を)解決する、(…を)決める、決着させる、(ついに)決心させる**
 
 
 - try
-  - 
+  - **(…を)努力する、やってみる、する、ためす、ためしにやってみる**
 - want
-  - 
+  - **欲する、(…が)欲しい、(…を)望む、用事がある、用事で捜している、したい(と思う)、望む、ほしいと思う、もらいた(くな)い、(…が)望む**
 - hope
-  - 
+  - **望み、希望、期待、有望な見込み、見込み、望みを与えるもの、希望の的**
 - wish
-  - 
+  - **思う、(…を)望む、(…が)望む、望む、したい(と思う)、ほしい、(…を)祈る、する、言う、告げる**
 - expect
-  - 
+  - **予期する、(…を)(当然のこととして)期待する、待つ、(…が)(…に)来るものと予期する、(…の)期待を寄せる、つもりである、(…が)期待する、望む、要求する、思う**
 
 
 - will
-    - 
+    - **…だろう、…でしょう、…するつもりである、…しようと思う、…するつもりですか、…してくれませんか、…しませんか、…してくださる、(…しようと)欲する、(あくまでも)…しようとする**
 
 
 - shall
-  - 
+  - **…でしょう、…だろう、…することになっている、…でしょうか、…だろうか、…させてやる、…しましょうか、…したらよいでしょうか、きっと…する、…すべきである**
 - should
-  - 
+  - **…であろう、…するぞ、…しましょうか(と言う)、…すべきである、するのが当然だ、したほうがいい、…すべきであった(のにしなかった)、…する(のは、とは)、…する(ように)**
 - may
-  - 
+  - **…してもよろしい、…してもさしつかえない、…するのはもっともだ、…かもしれない、おそらく…であろう、おそらく…かもしれない、…したかもしれない、(一体・だれ・何・どうして)…だろう、…かしらん、…だろうか**
 - might
-  - 
+  - **may の過去形、…してもよろしい、…かもしれない、(一体)…だろう、…するために、…できるように、…したかもしれない(が)、たとえ…であったにしても、…してもよい(のなら)、…するかもしれないのだが**
 - can
-  - 
+  - **…(することが)できる、…のしかたを知っている、…している、…してもよい、…しなさい、するとよい、…しなければならない、…してはいけない、…がありうる、することがある**
 - must
-  - 
+  - **…ねばならない、…してはいけない、ぜひ…ねばならない、必ず…する、…にちがいない、…に相違ない、きっと…だろう、…したにちがいない、…する必要がある**
 - dare
-  - 
+  - **あえて…する、思い切って…する**
 - need
-  - 
+  - **必要、入用、要求、(…が)必要、必要なもの、ニーズ、まさかの時、難局、窮乏、貧困**
 
 
 - impress
-    - 
+    - **印象を与える、印象づける、銘記させる、焼きつく、(…を)痛感させる、強く認識させる、(…で)感銘を与える、感動させる、(…に)押す、刻印する**
 
 
 - attract
-  - 
+  - **引く、引きつける、(魅力などで)引きつける、魅惑する、(…に)引きつける、(磁力などで)引く**
 
 ##### 感觉
 
 - enjoy
-    - 
+    - **(…を)楽しむ、喜ぶ、おもしろく経験する、楽しむ、(…で)楽しむ、楽しく過ごす、持っている、(…に)恵まれている**
 
 
 - suffer
-  - 
+  - **経験する、こうむる、受ける、(…を)忍ぶ、辛抱する、我慢する、許す、(黙って)させる、(…を)放任しておく、黙認する**
 - appreciate
   - 
 - care
@@ -2803,7 +2829,7 @@
 
 
 
-### 让感觉飞起来：形容词
+### 🥑让感觉飞起来：形容词【208个】
 
 #### 物的属性与构成
 
@@ -3475,7 +3501,7 @@
 
 
 
-### 英语的灵魂：介词
+### 🥑英语的灵魂：介词【48个】
 
 #### 动态位置
 
@@ -3639,16 +3665,19 @@
 - per
   - 
 
-
+```java
 关于介词的解读
 
 总单词量：48个
 
 类别：14个
+```
 
 
 
-### 英语的配角：副词及其他
+
+
+### 🥑英语的配角：副词及其他【123个】
 
 #### 副词
 
@@ -4043,9 +4072,11 @@
 - billion
   - 
 
-
+```java
 关于副词及其他词的解读
 
 总单词量：123个
 
 类别：9个
+```
+
