--- a/语言学/🥑1368个单词就够了-日英对照.md
+++ b/语言学/🥑1368个单词就够了-日英对照.md
@@ -1009,88 +1009,100 @@
 ##### 行为类
 
 - act
-  - 
+  - **行為**
 
 - exercise
-  - 
+  - **訓練する** 
 - practice
-  - 
+  - **(理論・思想に対して)実行、実践、(反復して行なう)練習**
 - test
-  - 
+  - **(能力などをためす)試験、検査**
 - experiment
-  - 
+  - **(科学上の)実験**
 - lesson
-  - 
+  - **学課、課業、(連続する)授業**
 - bath
-  - 
+  - **入浴**
 - security
-  - 
+  - **安全、無事、安心、(財政上の)安定、保障、防衛(手段)**
 - attention
-  - 
+  - **注意、注目、注意力、配慮、気配り、(人などの)世話、手当て**
 - focus
-  - 
+  - **焦点、(眼鏡・レンズなどの)焦点整合、ピント、集中点、中心**
 - step
-  - 
+  - **(足の運びとしての)歩み、歩、(歩む)方向**
 - education
-  - 
+  - **(学校)教育、(品性・能力などの)育成、養成、教育学**
 - advertisement
-  - 
+  - **広告(すること)、宣伝、(具体的な個々の)広告**
 
 - treatment
-  - 
+  - **(人などに対する)待遇、扱い、(物の)処理(法)、扱い方**
 - trick
-  - 
+  - **(相手をだまそうとする、ずるい)たくらみ、策略**
 - habit
-  - 
+  - **(個人の)癖、習慣、…する傾向**
 - service
-  - 
+  - **(他人に対する)奉仕、サビーす**
 - business
-  - 
+  - **職業、家業、事務、業務、仕事、執務、営業、商業、実業、事業**
 - homework
-  - 
+  - **(学童などの)宿題、予習**
 
 
 - job
-  - 
+  - **仕事、職**
 
 - task
-  - 
+  - **仕事**
 
 - project
-  - 
+  - **(大規模な)計画、企画、(大がかりな)事業、プロジェクト**
 - challenge
-  - 
+  - **挑戦、チャレンジ**
 
 
 - duty
-  - 
+  - **義務、本分**
 - responsibility
-  - 
+  - **責任、責務**
 - fault
-  - 
-- performance：
+  - **(性格上の)欠点、短所、欠陥、きず、誤り、過失、失策、落ち度、(過失の)責任、罪**
+- performance
+
+    - **上演、演奏**
+
 - concert
-  - 
+  - **音楽会、演奏会、コンサート**
 - opera
-  - 
+  - **オペラ**
 - drama
-- study：
+
+    - **戯曲、脚本、劇文学、劇、劇作、演劇、芝居、(一連の)劇的事件、ドラマ**
+
+- study
+
+    - **勉強**
+
 - math
-    - 
+    - **数学**
 
 
 - art
-  - 
+  - **芸術**
 - science
-  - 
+  - **科学**
 - philosophy
-  - 
+  - **哲学**
 - psychology
+
+  - **心理学**
+
 
 ##### arrangement：
 
 - deal
-    - 
+    - **(…を)分配する、分ける、配る、(…を)配る、分配する、加える、売買する**
 
 
 - insurance
@@ -1105,150 +1117,156 @@
 ##### occasion：
 
 - meeting
-    - 
+    - **会、集会、会議、大会**
 
 
 - interview
-  - 
+  - **面接**
 - party
-  - 
+  - **パーティー**
 - picnic
-  - 
+  - **ピクニック**
 - wedding
-  - 
+  - **結婚式、婚礼**
 - funeral
-  - 
+  - **葬式、葬儀**
 - barbecue
-  - 
+  - **バーベキュー**
 - ceremony
+
+  - **(宗教上または国家的・社会的な公式の厳かな)儀式、式典、(社交上の) 儀礼**
+
 
 ##### money：
 
 - profit
-    - 
+    - **(金銭上の)利益、利得、もうけ、得、益**
 
 
 - income
-  - 
+  - **(定期的に入る)収入、所得**
 - salary
-  - 
+  - **(公務員・会社員の)給料、俸給、サラリー**
 - loan
-  - 
+  - **貸し付け、貸すこと、ローン**
 - cash
-  - 
+  - **現金、お金(かね)、(購入の時支払う)現金払い**
 - cost
-  - 
+  - **(製作・工事などに支払う)費用**
 - credit
-  - 
+  - **信頼、信用**
 - deposit
-  - 
+  - **(銀行・金庫などに)預ける、預金する、預ける、置く**
 - price
-  - 
+  - **(品物の)価格、値段**
 - tax
-  - 
+  - **税、税金**
 - bill
-  - 
+  - **勘定書き、請求書**
 - budget
-  - 
+  - **(政府などの)予算案、予算(額)、経費、予算、家計、生活費**
 
 ##### 活动类
 
 - activity
-    - 
+    - **活動**
 
 
 - game
-  - 
+  - **ゲーム**
 - discipline
-  - 
+  - **訓練、鍛練**
 - crime
-  - 
+  - **(法律上の)犯罪、罪、犯罪**
 - trade
-  - 
+  - **商業、商い、貿易、通商、職業、商売**
 - economy
-  - 
+  - **節約、倹約、経済**
 - politics
-  - 
+  - **政治、政治学**
 - war
-  - 
+  - **戦争、(対立する力の)戦い、争い、闘争**
 - trip
   - 
 - fashion
   - 
 - industry
 
-##### sports：
+##### 体育类
+
+- sports
+  - **スポーツ**
 
 - soccer
-    - 
+    - **サッカー**
 
 
 - football
-  - 
+  - **フットボール**
 - golf
-  - 
+  - **ゴルフ**
 - basketball
-  - 
+  - **バスケットボール**
 - race
-  - 
+  - **(速さを競う)競走**
 
 ##### 思想类
 
 - thought
-    - 
+    - **考え．考え方**
 
 
 - idea
-  - 
+  - **(心に描く)考え、思いつき、アイディア、考え方、思想、考え、意見、見解、考えること**
 - view
-  - 
+  - **観点．視点**
 - theory
-  - 
+  - **(実際に対して)理論**
 - religion
-  - 
+  - **宗教**
 
 ##### plan：
 
 - strategy
-    - 
+    - **戦略、(目的達成のための)計略、策略、計画、方策、方法**
 
 
 - policy
-  - 
+  - **(政府などの)政策、(会社・個人などの)方針**
 - program
-  - 
+  - **プログラム、番組(表)、計画**
 
 ##### 整体类
 
 - network
-    - 
+    - **ネットワーク**
 
 
 - internet
-  - 
+  - **インターネット**
 - series
-  - 
+  - **シリーズ**
 - career
-  - 
+  - **生涯、経歴、履歴**
 
 - system
-  - 
+  - **組織、体制**
 
 - language
-    - 
+    - **(音声・文字による)言語**
 
 
 - transport
-  - 
+  - **(…へ)輸送する、運送する、(気持ちのよさで)運ぶ**
 
 ##### 其他类
 
 - favor
-    - 
+    - **好意、偏愛**
 
 
 - privilege
-  - 
+  - **(官職などに伴う)特権、特典、特別扱い**
 - mistake
   - **間違い、誤り、ミス、思い違い**
 - risk
@@ -1256,43 +1274,43 @@
 - advantage
   - **有利な点、強み、長所**
 - benefit
-  - 
+  - **利益**
 - problem
-  - 
+  - **(特に、解決の難しい)問題、難問**
 - trouble
-  - 
+  - **心配(事)、悩み、苦しみ、不幸、苦労(の種)、めんどうな事、困った点、具合の悪い点、問題点**
 - surprise
-  - 
+  - **驚かす、びっくりさせる**
 - secret
-  - 
+  - **秘密の**
 - award
-  - 
+  - **(審判・熟慮のうえで)与える、与える**
 - prize
-  - 
+  - **(競争などで勝利者に与えられる)賞**
 - diet
-  - 
+  - **日常の(飲)食物**
 - property
-  - 
+  - **財産、資産、所有物**
 - option
-  - 
+  - **選択**
 - case
-  - 
+  - **(ある特定の)場合**
 - example
-  - 
+  - **例**
 - sample
-  - 
+  - **(全体または種類を代表する)見本、サンプル**
 - score
-  - 
+  - **(競技・試合の)得点、総得点、得点記録、スコア、点数、成績**
 - limit
-  - 
+  - **極限、限度、限界(線)、制限、境界、範囲**
 - experience
-  - 
+  - **経験、体験**
 - effort
-  - 
+  - **努力**
 - energy
-  - 
+  - **精力、気力、元気、力、勢い、(人の)活動力、行動力、能力、エネルギー**
 - figure
-  - 
+  - **(輪郭のはっきりしている)形、形態、形象、形状、姿、容姿、外観**
 
 
 关于抽象名词的解读
@@ -1313,139 +1331,141 @@
 ##### 部位
 
 - side
-    - 
+    - **(左右・上下・前後・東西などの)側(がわ)、方、(内外・表裏などの)側、面**
 
 
 - edge
-  - 
+  - **縁．へり；周辺**
 - base
-  - 
+  - **(物事の)基礎、根拠、ふもと**
 - core
 
-  - 
+  - **コア**
 
 
 ##### 身体
 
 - head
-    - 
+    - **(顔を含めた)頭、首**
 
 
 - eye
-  - 
+  - **目**
 - ear
-  - 
+  - **耳**
 - face
-  - 
+  - **顔**
 - nose
-  - 
+  - **鼻**
 - foot
-  - 
+  - **足**
 - mouth
-  - 
+  - **口**
 - tooth
-  - 
+  - **歯**
 - tongue
-  - 
+  - **舌、(牛・羊などの)タン**
 - neck
-  - 
+  - **首**
 - shoulder
-  - 
+  - **肩**
 - breast
-  - 
+  - **胸**
 - chest
-  - 
+  - **胸**
 - stomach
-  - 
+  - **胃**
 - arm
-  - 
+  - **腕**
 - hand
-  - 
+  - **手**
 - finger
-  - 
+  - **(手の)指**
 - nail
-  - 
+  - **(人間などの手足の)つめ、(動物・鳥類などの)けづめ**
 - leg
-  - 
+  - **脚**
 - knee
-  - 
+  - **(人間の)ひざ**
 - throat
-  - 
+  - **のど**
 - brain
-  - 
+  - **脳**
 - heart
-  - 
+  - **心臓**
 - lung
-  - 
+  - **肺**
 - muscle
-  - 
+  - **筋(肉)**
 - bone
-  - 
+  - **骨**
 - nerve
-  - 
+  - **神経**
 - hair
-  - 
+  - **毛、毛髪、髪**
 - skin
-  - 
+  - **(人間の)皮膚、肌、(動物からはいだ)皮、毛皮、皮革**
 - blood
-  - 
+  - **血、血液**
 - sweat
-  - 
+  - **汗**
 
 ##### 精神
 
 - mind
-    - 
+    - **(身体と区別して、思考・意志などの働きをする)心、精神**
 
 
 - spirit
-  - 
+  - **(肉体・物質に対して人間の霊的な)心、(人体と離れた)霊魂、幽霊、亡霊**
 - soul
-  - 
+  - **霊魂、魂、死者の霊、亡霊、精神、心**
 - emotion
-  - 
+  - **(心身の動揺を伴うような)強い感情、気持ち**
 
 ##### feeling：
 
+- **感覚、感じ**
+
 - shame
-    - 
+    - **恥ずかしい思い、恥ずかしさ、羞恥(しゆうち)心、恥辱、恥**
 
 
 - stress
-  - 
+  - **(重みでかかる物理的な)圧力、重圧、(精神的な)圧迫感、ストレス**
 - respect
-  - 
+  - **尊敬する**
 - desire
-  - 
+  - **(…を)強く望む、欲求する、望む、願う、希望する、ほしいと願う、要望する**
 - pain
-  - 
+  - **(肉体的)苦痛、痛み**
 - sense
-  - 
+  - **感覚(機能)、(漠然とした)感じ、気持ち、感じ、意識、(美・方向などに対する本能的な)センス**
 
 ##### 力量
 
 - strength
-    - 
+    - **強さ、強いこと、力、体力、強度**
 
 
 - force
-  - 
+  - **(物理的な)力、強さ**
 
 - power
-  - 
+  - **力**
 
 - authority
-  - 
+  - **権威、権力**
 
 - ability
-  - 
+  - **できること、能力、技量、力量、才能**
 
 - sight
-    - 
+    - **視力、視覚、見ること、見えること**
 
 
 - intelligence
-  - 
+  - **知能、理解力、思考力**
 - memory
   - **記憶**
 - skill
@@ -1454,24 +1474,24 @@
 ##### 动物
 
 - tail
-    - 
+    - **(動物の)尾、しっぽ**
 
 
 - wing
-  - 
+  - **(鳥の)翼、(昆虫の)翅(はね)**
 
 ##### 植物
 
 - flower
-    - 
+    - **花**
 
 
 - leaf
-  - 
+  - **葉、木の葉**
 - root
-  - 
+  - **(植物の)根**
 - branch
-  - 
+  - **(木の)枝**
 
 ##### 其他
 
@@ -1480,7 +1500,8 @@
 
 
 - rest
-  - 
+  - **残り部分**
+  - **(ひと時の)休み、休憩、休息、睡眠、安らぎ、安静、安心、静止、停止**
 - half
   - **半分、2 分の 1**
 
@@ -1504,141 +1525,149 @@
 
 
 - appearance
-  - 
+  - **外観**
 
 ##### 尺寸
 
 - size
-    - 
+    - **(もの・人の)大きさ、規模、背格好、寸法、(服・靴などの)サイズ**
 
 
 - space
-  - 
+  - **スペース**
 
 ##### 位置
 
 - position
-  - 
+  - **位置、場所、所、所在地、ポジション**
 
 - point
-    - 
+    - **先端、先、突き出た先端、突端、岬、(小さな)点**
 
 
 - line
-  - 
+  - **綱、糸(など)、線**
 - end
-  - 
+  - **(時間・物事の)終わり、最後、末期、(手紙・物語などの)結末、結び、末尾、(存在・行為などの)終止、廃止、死、(細長いものの)端**
 
 
 - bottom
-    - 
+    - **底、基部**
 
 
 - middle
-  - 
+  - **真ん中の、中央の、中位の、中間の、中流の、並の、(言語史で)中期の**
 - top
-  - 
+  - **(ものの)頂上、上、上部**
 - front
-  - 
+  - **前部、正面**
 - back
-  - 
+  - **(人・動物の)背、後ろ**
 - center
-  - 
+  - **中心**
 - corner
-  - 
+  - **コーナー**
 - left
-  - 
+  - **左の、左方の、左側の、左手の**
 - right
-  - 
+  - **右ミギ**
 - direction：
+
+  - **方向、方角、方位、方面**
+
 - east
-  - 
+  - **東**
 - west
-  - 
+  - **西**
 - north
-  - 
+  - **北**
 - south
+
+  - **南**
+
 
 ##### 品质
 
 - quality
-    - 
+    - **品質**
 
 
 - feature
   - 
 - character
-  - 
+  - **性格、性質、人格、品性**
 - personality
-  - 
+  - **個性、性格**
 
-##### 其他属性
+#### 其他属性
 
 - color
-  - 
+  - **色**
 
 - weight
-  - 
+  - **重さ、重量、体重**
 
 - tone
-  - 
+  - **(音の)調子、音色**
 
 - material
-  - 
+  - **原料、材料**
 
 - structure
-  - 
+  - **構造**
 
 ##### 数量
 
 - amount
-    - 
+    - **数量すうりょう**
 
 
 - number
-  - 
+  - **数**
 - measurement
-  - 
+  - **測量、測定**
 - distance
-  - 
+  - **距離**
 - volume
-  - 
+  - **(特に、分厚い)本、(全集・セットの書物の)巻、(雑誌・機関誌・月報などを 1 年分まとめた)号、体積、量、かさ、容積、容量**
 - angle
-  - 
+  - **角度、角、(建物・部屋・家具などの)角(かど)、隅(すみ)**
 - temperature
-  - 
+  - **温度、気温、体温**
 
 - level：等级
-  - 
+  - **水準**
 
 - degree
-    - 
+    - **程度**
 
 
 - grade
-  - 
+  - **等級、階級、程度**
 - rank
-  - 
+  - **階級、等級、(社会的な)地位**
 - standard
 
+    - **標準、基準**
+
 - rate：比率
-  - 
+  - **割合、率、レート**
 
 - speed
-    - 
+    - **速さ、迅速(じんそく)、速度、スピード**
 
 
 - percentage
-  - 
+  - **パーセント、百分率、割合、率**
 
 ##### 类别
 
 - kind
-    - 
+    - **種類**
 
 
 - type
-  - 
+  - **型、型式、タイプ**
 
 #### 动态属性
 
@@ -1647,44 +1676,45 @@
 - form
   - **形、形状、姿、姿態、外観、人影、物影、型、方式、種類**
 
-
-##### way：
+- way：
+  - **方法**
+  - **道路、(古代ローマ人が造った)街道、(町の)通り**
 
 - behavior
-    - 
+    - **態度、行動**
 
 
 - mood
-  - 
+  - **気分、気持ち**
 - logic
-  - 
+  - **論理学、論理**
 - tradition
-  - 
+  - **伝統**
 - culture
-  - 
+  - **教養、文化**
 - style
-  - 
+  - **様式、風**
 - pattern
-  - 
+  - **(思考・行動・文などの)型、様式、パターン**
 - relation
-  - 
+  - **関係、関連、(具体的な)関係**
 - manner
-  - 
+  - **方法、仕方、態度、様子、作法**
 
 ##### 原因
 
 - cause
-    - 
+    - **原因、理由、根拠**
 
 
 - reason
-  - 
+  - **理由、わけ、動機、(…の)理由**
 - source
-  - 
+  - **元、源、原因**
 - excuse
-  - 
+  - **容赦する、許す、勘弁する**
 - factor
-  - 
+  - **(ある現象・結果を生ずる)要因、要素、原因**
 
 ##### 目的
 
@@ -1698,20 +1728,20 @@
 ##### 结果
 
 - effect
-    - 
+    - **結果、(結果を引き起こす)効果、影響、(薬などの)効き目**
 
 
 - result
-  - 
+  - **結果**
 
 ##### 过程
 
 - course
-    - 
+    - **(ものの動いていく)進路、(船・飛行機の)コース**
 
 
 - process
-  - 
+  - **過程、経過**
 
 ```java
 关于属性类名词的解读
@@ -1722,6 +1752,8 @@
 ```
 
 
+
+---
 
 
 
@@ -1832,28 +1864,28 @@
 两事物互换　
 
 - switch
-  - 
+  - **(電気の)スイッチ、(思いがけない)転換、変更**
 
 两事物相连　
 
 - link
-    - 
+    - **リンク**
 
 
 - join
-  - 
+  - **結合する、つなぐ、一緒になる**
 - connect
-  - 
+  - **連結する、つなぐ、結合する、接続する、結びつける**
 - stick
   - 
 - tie
-  - 
+  - **(ひも・ロープなどで)(…を)結びつける、縛る、くくる、(…で)(…を)結びつける**
 
 
 两事物相遇　
 
 - meet
-  - 
+  - **会う、出会う**
 
 两事物交叉　
 
@@ -1865,28 +1897,28 @@
 从一个点到另一个点　
 
 - move
-    - 
+    - **(…を)動かす、移す、移動させる、動かす、(…を)引っ越す**
 
 
 - shift
-  - 
+  - **移し変える、移す、転じる、変える**
 
 
 经过某个点　
 
 - pass
-  - 
+  - **通過する**
 
 低点往高点　
 
 - raise
-    - 
+    - **(高く)持ち上げる、掲げる、引き揚げる、高める、増す、引き上げる、上昇させる**
 
 
 - lift
-  - 
+  - **持ち上げる、上げる、あける**
 - rise
-  - 
+  - **上がる**
 
 
 高点往低点　
@@ -1896,23 +1928,23 @@
 
 
 - fall
-  - 
+  - **(重力によって無意図的に)落ちる :、落ちる、落下する、降る、降りる**
 
 
 一事物在另一事物后面　
 
 - follow
-  - 
+  - **(…に)ついていく、続く、従う、(…に)伴う、追う、追っていく、追求する**
 
 一事物在另一事物前面　
 
 - lead
-  - 
+  - **(…に)導く、案内する、(手を取って)連れていく、(綱などをつけて)引いていく、引く、(…を)(ある場所に)導く、もたらす、運ぶ、(…を)導く**
 
 一物载另一物　
 
 - carry
-  - 
+  - **(手や背で支えて)運ぶ、運搬する、運ぶ、持っていく、(ある場所へ)運ぶ、(…に)伝える、伝える**
 
 往复运动　
 
@@ -1932,30 +1964,33 @@
 快速运动　
 
 - run
-    - 
+    - **走る、駆ける**
 
 
 - rush
-  - 
+  - **急ぐ、急行する**
 - hurry
-  - 
+  - **大急ぎ**
 
 #### 力量
 
 轻轻接触　
 
 - touch
-  - 
+  - **(…に)(手で)触れる、さわってみる、(…で)(…に)触れる、触れる、(…を)(…に)あてる、接触する**
 
 用力接触　
 
 - hit
-    - 
+    - **(…で)打つ、打つ、殴る、くらわせる、襲う**
 
 
 - knock
   - 
 - crash
+
+  - 
+
 
 使快速运动　
 
@@ -3324,20 +3359,20 @@
 - wonderful
   - 
 - amazing
-  - 
+  - **驚くべき、びっくりするような、すばらしい**
 - excellent
-  - 
+  - **優秀な**
 
 ##### 品质（坏）
 
 - bad
-    - 
+    - **悪い**
 
 
 - terrible
-  - 
+  - **恐ろしい、怖い、ものすごい、ひどい、つらい、厳しい、非常に悪い**
 - awful
-  - 
+  - **ひどい、(程度が)非常な、すごい**
 
 ##### 真实性
 
@@ -3967,13 +4002,13 @@
 ##### 代词
 
 - I
-    - 
+    - **私**
 
 
 - you
-  - 
+  - **あなた(たち)は、君(たち)は、お前(たち)は、あなた(たち)を、君(たち)を、お前(たち)を、人は(だれでも)**
 - he
-  - 
+  - **彼は、あの人は、その人**
 - she
   - 
 - we
