--- a/语言学/🥑1368个单词就够了-日英对照.md
+++ b/语言学/🥑1368个单词就够了-日英对照.md
@@ -1995,41 +1995,41 @@
 使快速运动　
 
 - throw
-  - 
+  - **投げる**
 
 用力接触并来回移动　
 
 - rub
-  - 
+  - **摩擦する**
 
 用力使事物脱离原来的位置　
 
 - pull
-  - 
+  - **引く**
 
 对事物朝某一方向用力　
 
 - push
-    - 
+    - **押す**
 
 
 - draw
-  - 
+  - **(軽くなめらかに)引く、引っぱる**
 - press
-  - 
+  - **押す**
 
 #### 空间
 
 空间开放或关闭　
 
 - open
-    - 
+    - **あいた、開いた、あいている、あけた**
 
 
 - close
-  - 
+  - **閉じる、閉める、休業する**
 - shut
-  - 
+  - **閉める、閉じる、(…を)閉める**
 
 
 一事物进入某一空间　
@@ -2039,19 +2039,19 @@
 
 
 - enter
-  - 
+  - **入る、入り込む**
 
 
 一事物进入某一空间（气体或液体）　
 
 - fill
-    - 
+    - **いっぱいにする、満たす**
 
 
 - pump
   - 
 - spill
-  - 
+  - **こぼす、流す、投げ出す、振り落とす、漏らす**
 - spray
   - 
 
@@ -2059,98 +2059,98 @@
 事物离开某一空间　
 
 - clean
-    - 
+    - **清潔な**
 
 
 - clear
-  - 
+  - **清掃**
 - wipe
-  - 
+  - **(…を)ぬぐう、ふく、ぬぐい落とす、ふき取る**
 
 
 事物离开某一地点　
 
 - leave
-    - 
+    - **去る、出る、出発する、やめる、退学する、卒業する**
 
 
 - quit
-  - 
+  - **やめる、よす、断念する、放棄する、去る、立ち退く**
 
 
 一事物到达某一地点　
 
 - arrive
-    - 
+    - **(ある場所に)着く、到着する、届く、着く、達する、到達する、**
 
 
 - reach
-  - 
+  - **到着する、着く、届く、達する、入る**
 
 
 一事物固定在某一个空间　
 
 - fix
-    - 
+    - **(…を)(…に)固定する、動かないようにする**
 
 
 - set
-  - 
+  - **(特定の場所に動かないように)置く :、(…を)(…に)置く**
 
 #### 时间
 
 ##### 某事发生　
 
 - begin
-    - 
+    - **始める、着手する、(…を)(…で)開始する、(…し)始める**
 
 
 - start
-  - 
+  - **出発する、始まる、(…に)着手する、(…で)始める**
 - happen
-  - 
+  - **起こる、生じる**
 
 ##### 某事结束　
 
 - finish
-  - 
+  - **(…を)終える、済ます、完了する、完成する、(…し)終える**
 
 ##### 某事停止　
 
 - stop
-  - 
+  - **止める、押さえる、中断する、停止する、(自ら)やめる、中止する**
 
 #### 方向
 
 一个方向到另一个方向　
 
 - turn
-  - 
+  - **回す**
 
 #### 整体与部分
 
 ##### 从大到小（用力）　
 
 - break
-    - 
+    - **切断する、(二つ以上または細片に)壊す、割る**
 
 
 - crack
   - 
 - split
-  - 
+  - **(縦にまたは木目にそって)割る**
 - tear
   - 
 
 ##### 从大到小　
 
 - divide
-  - 
+  - **分ける、分割する、(…に)分類する**
 
 ##### 从多到少　
 
 - cut
-  - 
+  - **(鋭い刃物などで)切る**
 
 #### 形状
 
@@ -2170,42 +2170,42 @@
 #### 尺寸
 
 - grow
-  - 
+  - **成長する、伸びる、生長する、生える、育つ、産する、(…に)成長する、増大する、発展する、(…へ)発達する**
 
 #### 行为
 
 - look
-    - 
+    - **見る**
 
 
 - see
-  - 
+  - **見る**
 - listen
-  - 
+  - **(意識して)聞く、聞こうとする**
 - hear
-  - 
+  - **(…が)聞こえる、(…を)聞く**
 - say
-  - 
+  - **(…と)言う、言う、話す、述べる、言われている**
 - speak
-  - 
+  - **話す**
 - talk
-  - 
+  - **話す、しゃべる**
 - tell
-  - 
+  - **告げる、話す、語る、言う、述べる、(…を)告げる、伝える、(…と)言う、知らせる、命じる**
 - ask
-  - 
+  - **尋ねる、質問する、する、(…を)尋ねる、依頼する、求める、請う、頼む、(人に)頼む、招待する**
 - think
-  - 
+  - **思う、(…と)思う、…と思う(か)、思う(か)、(…を)思う、みなす、(…を)考える、かな、つもりである、考える**
 - believe
-  - 
+  - **信じる**
 - know
-  - 
+  - **知る、知っている、(…が)わか(ってい)る**
 - like
-  - 
+  - **(外見・量など)同様な、類似の、似ていて**
 - love
-  - 
+  - **愛、愛情、(よろしくという)あいさつ、恋愛、恋、性欲、色情、性交、情事、好み**
 - do
-  - 
+  - **(…を)する、行なう、果たす、遂行する、尽くす、する**
 
 #### 系动词
 
@@ -2225,12 +2225,17 @@
 - taste
   - **味覚、味感、味、風味、少量、気味、あじ、経験、(個人的な)好み、趣味**
 
-
+```java
 关于单纯型动词的解读
 
 总单词量：114个
 
 类别：15个
+```
+
+
+
+---
 
 
 
@@ -2273,69 +2278,72 @@
 ##### 告诉：
 
 - claim
-    - 
+    - **(当然のこととして)要求する、要求する、請求する**
 
 
 - warn
-  - 
+  - **警告する**
 - introduce
-  - 
+  - **紹介する**
 - explain
-  - 
+  - **説明する、明白にする、(…を)説明する**
 - express
-  - 
+  - **(言葉で)表現する、(…を)言い表わす**
 - confirm
 
-  - 
+  - **(正しいと)確かめる、確認する**
 
 
 ##### 要求：
 
 - beg
-    - 
+    - **請い求める、頼む、懇願する、(…を)懇願する、願う、請う、**
 
 
 - charge
-  - 
+  - **請求する**
 - order
+
+  - 
+
 
 ##### 带有情感地说：
 
 - argue
-    - 
+    - **(…を)論じる、論議する**
 
 
 - blame
-  - 
+  - **非難する、とがめる**
 - praise
-  - 
+  - **称賛する、ほめる**
 - encourage
-  - 
+  - **元気づける、励ます**
 - complain
-  - 
+  - **不平を言う、ぐちをこぼす、泣き事を言う、訴える、苦情を言う**
 - promise
-  - 
+  - **約束、契約、保証**
 - insist
-  - 
+  - **(反対されても)(…を)主張する、力説する、強調する、(…を)強要する、要求する**
 - shout
-  - 
+  - **大声で叫ぶ、叫ぶ、大声を出す**
 - threat
 
-  - 
+  - **脅し、脅迫、脅威、脅威となるもの、兆し、恐れ**
 
 
 ##### 其他：
 
 - answer
-    - 
+    - **答える、(…と)答える、答えて言う、(…を)答える、(応じて)出る、応じる**
 
 
 - call
-  - 
+  - **(…を)大声で呼ぶ、(…に)呼び掛ける**
 - count
-  - 
+  - **(総数を知るために一つ一つ)(…を)数える**
 - pronounce
-  - 
+  - **発音する**
 
 ##### 想
 
@@ -2433,17 +2441,17 @@
 - suffer
   - **経験する、こうむる、受ける、(…を)忍ぶ、辛抱する、我慢する、許す、(黙って)させる、(…を)放任しておく、黙認する**
 - appreciate
-  - 
+  - **よさがわかる、真価を認める、(…を)高く評価する、鑑賞する**
 - care
-  - 
+  - **気にかかること、心配、気がかり、不安**
 - hate
-  - 
+  - **(…を)憎む、ひどく嫌う**
 - worry
-  - 
+  - **心配させる**
 - thank
-  - 
+  - **感謝する**
 - welcome
-  - 
+  - **ようこそ!、いらっしゃい!**
 - bless
   - 
 - thrill
@@ -2451,247 +2459,250 @@
 - freak
   - 
 - shock
-  - 
+  - **ショック**
 - bother
-  - 
+  - **迷惑をかける**
 - annoy
-  - 
+  - **怒らせる**
 - disturb
-  - 
+  - **(…を)(かき)乱す、乱す、妨げる、妨害する、仕事(など)を中断する**
 
 ##### 自然现象
 
 - die
-    - 
+    - **死ぬ**
 
 
 - live
-  - 
+  - **住む、住んでいる**
 - burn
-  - 
+  - **焼ける、燃える**
 - boil
-  - 
+  - **沸かす**
 
 #### 人体行为
 
 ##### 肢体：
 
 - dance
-    - 
+    - **踊る、ダンスをする**
 
 
 - ride
-  - 
+  - **乗る**
 - lie
-  - 
+  - **横になる**
 - climb
-  - 
+  - **登る**
 - beat
-  - 
+  - **(続けざまに)打つ**
 
 ##### 上肢：
 
 - hug
-  - 
+  - **いだく**
 
 ##### 下肢：
 
 - sit
-    - 
+    - **座る、腰かける**
 
 
 - stand
-  - 
+  - **立つ、立っている、立ち上がる**
 - walk
-  - 
+  - **歩く、散歩する**
 - kick
-  - 
+  - **(…を)ける**
 - jump
-  - 
+  - **(足を使って上下・左右に)跳ぶ**
 - skip
-  - 
+  - **スキップする**
 
 ##### 面部：
 
 - smile
-    - 
+    - **(声をたてないで)笑う、微笑する、ほほえむ、にっこりする**
 
 
 - laugh
-  - 
+  - **(声を立てて)笑う**
 - cry
-  - 
+  - **(声をあげて)泣く**
 
 ##### 嘴巴：
 
 - eat
-    - 
+    - **食べる、(スプーンを用いて)飲む**
 
 
 - kiss
-  - 
+  - **キス、くちづけ、接吻(せつぷん)**
 - suck
-  - 
+  - **吸い込む、吸う**
 - lick
-  - 
+  - **(…を)(舌で)なめる**
 - blow
-  - 
+  - **吹く**
 - cough
-  - 
+  - **せきをする**
 - sing
-  - 
+  - **歌う、鳴く**
 
 ##### 鼻子：
 
 - breathe
-  - 
+  - **息をする、呼吸する**
 
 ##### 皮肤：
 
 - bleed
-  - 
+  - **出血する、血を流す**
 
 ##### 精神：
 
 - sleep
-    - 
+    - **眠る、(…に)泊まる、寝る**
 
 
 - wake
-  - 
+  - **目覚める、起きる**
 - relax
-  - 
+  - **緩める、力を抜く**
 
 ##### 健康：
 
 - hurt
-    - 
+    - **けがをさせる、(…を)痛める、けがをする**
 
 
 - injure
-  - 
+  - **(事故などで)傷つける、(…に)けがをさせる、(…を)痛める、傷を作る、けがをする**
 - cure
-  - 
+  - **治す、いやす、治療する、矯正する、直す**
 - inject
-  - 
+  - **注入する、注射する**
 
 ##### 生活行为
 
 - cook
-    - 
+    - **料理人、コック**
 
 
 - bake
-  - 
+  - **焼く**
 - fry
-  - 
+  - **(…を)油でいためる**
 - drive
-  - 
+  - **運転する**
 - measure
-  - 
+  - **(…を)測定する、測る**
 - wear
-  - 
+  - **身につけている、着用している**
 - wash
-  - 
+  - **洗う、洗濯する**
 - tape
-  - 
+  - **(荷造り用の)テープ**
 - record
-  - 
+  - **(…を)記録する、書き留める、登録する**
 - post
-  - 
+  - **郵便**
 - travel
-  - 
+  - **(遠方または外国へ)旅行する、(乗り物で)行く**
 - screw
   - 
 - dig
-  - 
+  - **(道具・手などを使って)掘る、掘り起こす**
 - hide
-  - 
+  - **(…を)隠す、隠れる、見えないようにする**
 - pack
-  - 
+  - **包み、荷物**
 - mark
-  - 
+  - **跡、傷跡、しみ、汚点、(体の)あざ、マーク、記号、符号、刻印、検印**
 
 ##### 社会行为
 
 - buy
-    - 
+    - **買う、購入する**
 
 
 - sell
-  - 
+  - **売る、売り渡す、(…で)売却する、商う、販売する、売っている、裏切る**
 - shop
-  - 
+  - **商店、小売店、専門店**
 - pay
-  - 
+  - **支払う**
 - spend
-  - 
+  - **使う、費やす、(…に)使う、過ごす**
 - waste
-  - 
+  - **浪費する、むだにする**
 - invite
-  - 
+  - **(…へ)招待する、招く**
+  - **(…を)誘う**
 - rent
-  - 
+  - **家賃**
+  - **レントをする**
 - fight
-  - 
+  - **戦い**
 - kill
-  - 
+  - **(…を)殺す**
 - steal
-  - 
+  - **盗む、(…を)こっそり取る、うまく手に入れる**
 - cheat
-  - 
+  - **(…を)だます**
 - invest
-  - 
+  - **投資する、(…に)投資する**
 - rob
-  - 
+  - **強奪する、略奪する、奪う**
 - wait
-  - 
+  - **待つ**
 - marry
-  - 
+  - **結婚する**
 - divorce
-  - 
+  - **離婚**
 - borrow
-  - 
+  - **借りる**
 - lend
-  - 
+  - **貸す**
 - owe
-  - 
+  - **借りている**
 - vote
-  - 
+  - **投票**
 - bet
-  - 
+  - **賭(か)ける、(…に)賭ける、(…で)賭けをする**
 - celebrate
-  - 
+  - **挙行する、(式を挙げて)祝う**
 
 
 - play
-    - 
+    - **遊ぶ**
 
 
 - pretend
-  - 
+  - **ふりをする**
 
 
 - help
-    - 
+    - **助ける、援助する、救う、手伝う**
 
 
 - direct
-  - 
+  - **(…を)指導する、指揮する、監督する、管理する**
+  - **(…に)指図する、指示する、命令する、指図する**
 - entertain
   - 
 - interrupt
-  - 
+  - **中断する**
 - distract
-  - 
+  - **散らす、そらす、転ずる**
 
 
 - design
-    - 
+    - **デザインする、設計する**
 
 
 - build
-  - 
+  - **建てる、建設する、建造する、築く、造る**
 - invent
   - 
 - copy
@@ -2855,12 +2866,17 @@
 - attack
   - 
 
-
+```java
 关于世故型动词的解读
 
 总单词量：219个
 
 类别：14个
+```
+
+
+
+---
 
 
 
@@ -2871,31 +2887,31 @@
 ##### 大小
 
 - big
-    - 
+    - **大きい**
 
 
 - huge
-  - 
+  - **巨大な、莫大な、大きい**
 - little
-  - 
+  - **小さい**
 - small
-  - 
+  - **小さい**
 - medium
-  - 
+  - **M サイズ、中**
 
 ##### 高低
 
 - high
-    - 
+    - **高い**
 
 
 - low
-  - 
+  - **低い**
 
 ##### 长短
 
 - long
-    - 
+    - **長い**
 
 
 - short
