--- a/语言学/🥑1368个单词就够了-日英对照.md
+++ b/语言学/🥑1368个单词就够了-日英对照.md
@@ -596,7 +596,7 @@
 - tub
   - 
 - sink
-  - 
+  - **カタカナ**
 - pot
   - **ポット**
 - pan
@@ -818,7 +818,7 @@
 - volunteer
   - **ボランティア**
 - fool
-  - 
+  - **ばか者**
 - sir
   - **あなた、先生、閣下、お客さん、だんな、君!、おい!、こら!、拝啓、サー…**
 - madam
@@ -874,12 +874,15 @@
 - family
   - **家族**
 
-
+```java
 关于具体名词的解读
 
 总单词量：355个
 
 类别：38个
+```
+
+
 
 
 
@@ -964,7 +967,7 @@
 - fact
   - **(実際に起こった)事実**
 - detail
-  - 
+  - **ディテール**
 - evidence
   - **証拠(物件)、物証、証言、証拠**
 - clue
@@ -1187,10 +1190,14 @@
 - war
   - **戦争、(対立する力の)戦い、争い、闘争**
 - trip
-  - 
+  - **旅行**
 - fashion
-  - 
+  - **…風**
+  - **流行の様式、(服などの)ファッション**
 - industry
+
+  - **産業、工業、製造業、…業**
+
 
 ##### 体育类
 
@@ -1953,11 +1960,11 @@
 
 
 - roll
-  - 
+  - **ころがる**
 - shake
-  - 
+  - **(上下にさっと)振る、(…を)振り動かす、揺すぶる**
 - screw
-  - 
+  - **ねじ**
 
 #### 速度
 
@@ -2159,13 +2166,13 @@
 
 
 - fold
-  - 
+  - **折る**
 - twist
   - 
 - stretch
-  - 
+  - **引っぱる、(…を)引っぱる**
 - spread
-  - 
+  - **開く、広げる、伸ばす**
 
 #### 尺寸
 
@@ -2704,55 +2711,59 @@
 - build
   - **建てる、建設する、建造する、築く、造る**
 - invent
-  - 
+  - **(…を)発明する**
 - copy
-  - 
+  - **写し、複写、コピー**
 
 
 - prepare
-    - 
+    - **(…を)準備する、用意する**
 
 
 - organize
-  - 
+  - **組織する、計画する**
 - manage
-  - 
+  - **経営する**
 - handle
-  - 
+  - **ハンドル、柄**
 - treat
-  - 
+  - **(…に)待遇する、取り扱う**
+  - **扱う**
 - control
-  - 
+  - **支配(すること)、取り締まり、管理、監督**
 
 
 - use
-    - 
+    - **使う、用いる（もちいる）、使用する、利用する**
 
 
 - apply
-  - 
+  - **(…に)当てる、塗る、つける、当てる、用いる、(…に)適用する、応用する**
 - save
-  - 
+  - **救う、(危険・損失などの及ばないように)救う、救助する、助ける、救い出す、保全する、救済する、安全に守る、うまく切り抜ける、守る**
 - choose
-  - 
+  - **選ぶ、選択する、決める**
 - accept
-  - 
+  - **受け入れる、引き受ける**
 - pick
-  - 
+  - **選ぶ**
 - collect
-  - 
+  - **集める**
 
 
 - win
-    - 
+    - **勝つ**
 
 
 - fail
-  - 
+  - **失敗する**
 - miss
-  - 
+  - **取り逃がす**
+  - **見逃す**
+  - **見落とす**
 - lose
-  - 
+  - **失う、なくす、置き忘れる、遺失する**
+  - **見失う、迷う、道に迷う**
 
 
 - check
@@ -2760,13 +2771,15 @@
 
 
 - examine
-  - 
+  - **調査する、検査する、審査する、考察する**
+  - **診察する、試験する、尋問する、審理する**
 - compare
-  - 
+  - **比較する**
+  - **対照する**
 - solve
-  - 
+  - **解決する、解く、解明する、解答する**
 - analyze
-  - 
+  - **分析する**
 
 ##### 运动
 
@@ -2775,96 +2788,99 @@
 
 
 - swim
-  - 
+  - **泳ぐ、水泳する**
 - fly
-  - 
+  - **(空中を翼や機械を用いて)飛ぶ** 
+  - **飛行する**
 - shoot
-  - 
+  - **撃つ、発射する、射る、放つ**
 
 ##### 工作
 
 - work
-    - 
+    - **仕事、労働、作業、努力、勉強、研究、(なすべき)仕事、任務、仕事、務め**
 
 
 - interview
-  - 
+  - **面接**
 - hire
-  - 
+  - **(賃金を払って)雇う、雇用する**
 - fire
   - 
 - compete
-  - 
+  - **競争する、競い合う**
 - retire
-  - 
+  - **(老齢・定年などの理由で)退職する、退役する、引退する**
 
 ##### 学习
 
 - read
-    - 
+    - **読む**
 
 
 - write
-  - 
+  - **書く**
 - spell
   - 
 - translate
-  - 
+  - **(…へ)訳す、翻訳する**
 
 ##### 事物之间的关系
 
 - match
-    - 
+    - **マッチ**
 
 
 - qualify
-  - 
+  - **適任とする**
 - equal
-  - 
+  - **(数量・程度など)等（ひとしい）しい、相等しい**
 - share
-  - 
+  - シャーあ
 - include
-  - 
+  - **(全体の一部として)含む、(…を)含む、含める**
 - separate
-  - 
+  - **離す、切り離す、引き離す、(…を)切り離す、分離する、(…を)分けている、隔てている、(…を)(…に)分ける、区切る、(…を)分散する**
 - belong
-  - 
+  - **(所有物として)(…に)属（ぞく）する**
 - depend
-  - 
+  - **(…を)頼る、(…に)(…を)頼る、依存する**
 - involve
-  - 
+  - **巻き込む**
 
 ##### 事物的发展变化
 
 - change
-    - 
+    - **変化**
+    - **変更**
 
 
 - develop
-  - 
+  - **開発する**
 - improve
-  - 
+  - **(…を)改良する、改善する、進歩させる、(…に)上達する**
 - reduce
-  - 
+  - **(大きさ・数量・程度などの点で)減らす、減少させる、縮める、縮小する**
+  - **下げる**
 - add
-  - 
+  - **(…を)(他のものに)加える、追加する、(…を)加える**
 - promote
-  - 
+  - **(…に)昇進させる、進級させる、(…を)増進する、促進する**
 
 ##### 事物相互作用
 
 - damage
-    - 
+    - **損害**
 
 
 - spoil
-  - 
+  - **役に立たなくする、台なしにする**
 - ruin
-  - 
+  - **破滅、滅亡**
 - affect
-  - 
+  - **影響を及ぼす、作用する**
 - attack
-  - 
+  - **攻撃する、襲う**
 
 ```java
 关于世故型动词的解读
@@ -2915,225 +2931,230 @@
 
 
 - short
-  - 
+  - **短い**
 - tall
-  - 
+  - **高い**
 
 ##### 深浅
 
 - deep
-    - 
+    - **深い**
 
 
 - shallow
-  - 
+  - **浅い**
 
 ##### 粗细
 
 - thick
-    - 
+    - **厚い**
 
 
 - thin
-  - 
+  - **薄い**
 - fat
-  - 
+  - **太い**
 - slim
-  - 
+  - **ほっそりした**
 
 ##### 宽窄
 
 - narrow
-    - 
+    - **狭い、細い**
 
 
 - wide
-  - 
+  - **広い**
 
 ##### 重量
 
 - heavy
-    - 
+    - **重い**
 
 
 - light
-  - 
+  - 軽い
 
 ##### 正斜
 
 - straight
-    - 
+    - **まっすぐな**
 
 
 - curved
-  - 
+  - **曲がった**
 - flat
-  - 
+  - **平らな、平たい**
 
 ##### 形状
 
 - round
-    - 
+    - **丸い**
 
 
 - square
-  - 
+  - **正方形、四角、四角いもの**
 
 ##### 距离
 
 - near
-    - 
+    - **(空間・時間的に)近く**
 
 
 - far
-  - 
+  - **遠くに**
 
 ##### 事物与空间
 
 - full
-    - 
+    - **いっぱい**
 
 
 - empty
-  - 
+  - **空(から)の**
 - blank
-  - 
+  - **空(から)の**
 - bare
   - 
 - dirty
-  - 
+  - **よごれた、汚い**
 
 ##### 时间
 
 - new
-    - 
+    - **新しい**
 
 
 - fresh
-  - 
+  - **新鮮な、新しい**
 
 ##### 数量
 
 - extra
-    - 
+    - **余分の**
 
 
 - only
-  - 
+  - **唯一の、ただ…だけの**
 - single
-  - 
+  - **たったひとつの、ただ 1 個の、ただのひとつも(ない)、独身の、独りの、一人用の、シングルの**
 - poor
-  - 
+  - **貧しい、貧乏な**
 - rich
-  - 
+  - **金持ちの、豊かな、金持ち**
 - slight
-  - 
+  - **(数・量・程度など)わずかな、少しばかりの、ちょっとした、少しも(…ない)**
 - total
-  - 
+  - **全体の、総計の**
 
 ##### 质地
 
 - hard
-    - 
+    - **堅い、硬い、固い**
 
 
 - soft
-  - 
+  - **柔らかい、軟らかい、硬くない**
 - tough
-  - 
+  - **(切りにくい、またはかみ切れなくて)かたい、こわい、粘りのある、頑丈な、タフな**
 - tender
-  - 
+  - **柔らかい、柔らかな**
 - smooth
-  - 
+  - **(表面などの)なめらかな、すべすべした、平坦(へいたん)な**
 - rough
-  - 
+  - **(手ざわりが)粗い、ざらざらした**
 - sharp
-  - 
+  - **鋭い**
 - blunt
-  - 
+  - **鈍い**
 - fresh
-  - 
+  - **新鮮な、新しい**
 - raw
-  - 
+  - **生(なま)の**
 - pure
-  - 
+  - **(まじりけのない意味で)純粋な**
 - plain
-  - 
+  - **明白な、わかりやすい、簡単な**
 - even
-  - 
+  - …でさえ(も)、…すら、(それどころか)いやまったく、いっそう、なお
 
 ##### 力量
 
 - strong
-    - 
+    - **力がある**
+    - **体力のある、強健な、強壮な、丈夫な、(…に)強くて、病気が治って、体力が回復して、頑丈な、強固な、堅固な**
 
 
 - weak
-  - 
+  - **力が足りない**
+  - **弱い、弱々しい、虚弱な、力のない**
 - tight
-  - 
+  - **堅い、きつい、しっかり**
 - loose
-  - 
+  - **放たれた、自由な、解放されて、解き放たれて、結んでない、離れている、束ねてない、包装してない、ばらの、ゆるんだ**
 - firm
-  - 
+  - **(質の)硬い**
 - tense
-  - 
+  - **ぴんと張った、張り詰めた、緊張した、(緊張しすぎて)不自然な、堅苦しい、筋肉の張った**
 
 ##### 状态
 
 - liquid
-    - 
+    - **液体**
 
 
 - gas
-  - 
+  - **気体、(燃料・暖房・調理用)ガス**
 - solid
-  - 
+  - **(気体・液体でなくて)固体の、固形体の**
 
 ##### 温度
 
 - hot
-    - 
+    - **(温度上「冷たい」に対して)熱い、温度の高い**
 
 
 - warm
-  - 
+  - **暖かい、温暖な**
 - cold
-  - 
+  - **寒い、冷たい**
 - cool
-  - 
+  - **涼しい**
 
 ##### 湿度
 
 - dry
-    - 
+    - **乾いた、湿っていない、乾燥した**
 
 
 - wet
 
+  - **ぬれた、湿った、湿気のある**
+
+
 ##### 亮度
 
 - bright
-    - 
+    - **明るい、輝く**
 
 
 - dark
-  - 
+  - **(明かりのない)暗い**
 - dull
-  - 
+  - **鈍い**
 
 ##### 味道
 
 - sweet
-    - 
+    - **甘い、甘口の**
 
 
 - bitter
-  - 
+  - **苦い、苦みの、つらい**
 - delicious
-  - 
+  - **とてもおいしい、うまい**
 - sour
-  - 
+  - **酸っぱい**
 - spicy
   - 
 
@@ -3141,170 +3162,172 @@
 声音
 
 - loud
-    - 
+    - **高い、大声の、音が高い、騒々しい、うるさい**
 
 
 - quiet
-  - 
+  - **静かな、穏やかな**
 
 #### 人的属性与构成
 
 ##### 时间
 
 - young
-    - 
+    - **若い、幼い**
 
 
 - old
-  - 
+  - **年取った、老いた、老年の、老人たち、(満)…歳の、年長の、年上の、古い**
 
 ##### 身体
 
 - hungry
-    - 
+    - **飢えた、腹のへった**
 
 
 - ill
-  - 
+  - **病気で**
 - sick
-  - 
+  - **病気の**
 - tired
-  - 
+  - **疲れた**
 - blind
-  - 
+  - **見えない**
 - sore
-  - 
+  - **痛い**
 - born
-  - 
+  - **bear「生む」の過去分詞**
 - pregnant
-  - 
+  - **妊娠した**
 - alive
-  - 
+  - **生きて、生きている者**
 
 ##### 行为
 
 - busy
-    - 
+    - **忙しい、多忙な**
 
 
 - violent
-  - 
+  - **激しい、猛烈な、激烈な、乱暴な**
 - wild
-  - 
+  - **野生の**
 
 ##### 外表
 
 - beautiful
-    - 
+    - **美しい、きれいな**
 
 
 - ugly
-  - 
+  - **醜い、見苦しい**
 - sexy
-  - 
+  - **性的魅力のある、セクシーな**
 
 ##### 心智
 
 - smart
-    - 
+    - **頭のよい**
 
 
 - clever
-  - 
+  - **賢い**
 - stupid
   - 
 - confused
   - 
 - awake
-  - 
+  - **起こす、呼び起こす、自覚させる**
 - asleep
-  - 
+  - **眠って**
 - familiar
-  - 
+  - **よく知っている、見慣れている、ありふれた、熟知して、精通して、よく知られて**
 - patient
-  - 
+  - **忍耐強い、辛抱強い**
 
 ##### 态度
 
 - polite
-    - 
+    - **礼儀正しい**
 
 
 - lazy
-  - 
+  - **怠惰な、不精な、眠気を誘う、もの憂げな、けだるい、動きののろい**
 - honest
-  - 
+  - **正直な、実直な、誠実な、信頼できる**
 - rude
-  - 
+  - **失礼な、無礼な**
 - brave
-  - 
+  - **勇敢な、勇ましい**
 - aggressive
-  - 
+  - **侵略的な、攻撃的な**
 
 ##### 情感
 
 - interested
-    - 
+    - **興味をもった**
+    - **興味があって**
 
 
 - curious
-  - 
+  - **好奇心の強い**
 - proud
-  - 
+  - **誇らしげな、自慢する、得意な、(…を)誇って、自慢して**
 - sure
-  - 
+  - **確信して、確かで、(…を)確信して、(…に)自信を持って**
 - confident
-  - 
+  - **(…を)確信して、確信して、自信に満ちた**
 
 ##### 心情
 
 - happy
-    - 
+    - **幸福な、幸せな、楽しい、満足な**
 
 
 - glad
-  - 
+  - **うれしくて**
 - sad
-  - 
+  - **悲しい**
 - upset
-  - 
+  - **心配する**
 - sorry
-  - 
+  - **気の毒に思って、(…が)気の毒で**
 - guilty
   - 
 - calm
-  - 
+  - **穏やかな、静かな、平静な、落ち着いた**
 - afraid
-  - 
+  - **(…を)恐れて、怖がって**
 - angry
-  - 
+  - **怒って、腹を立てて、怒りの**
 - crazy
   - 
 - mad
   - 
 - excited
-  - 
+  - **興奮した、(…に)興奮して、興奮して**
 - bored
   - 
 - disappointed
-  - 
+  - **失望した**
 - jealous
-  - 
+  - **うらやむ**
 - lonely
-  - 
+  - **孤独な、ひとりぼっちの、(孤独のために)寂しい**
 
 #### 事的属性与构成
 
 ##### 难度
 
 - easy
-    - 
+    - **容易な、平易な、やさしい、やさしくて**
+    - **易い（やすい）**
 
 
 - hard
-  - 
+  - **堅い、硬い、固い**
 - difficult
-  - 
+  - **困難な、難しい、理解しにくい**
 
 ##### 时间
 
@@ -3315,65 +3338,66 @@
 - due
   - 
 - urgent
-  - 
+  - **緊急の**
 - efficient
   - **効率的**
 
 ##### 可能性
 
 - possible
-    - 
+    - **可能な**
 
 
 - available
-  - 
+  - **(すぐに)利用できる、入手できる、得られる**
 
 ##### 安全性
 
 - dangerous
-    - 
+    - **危険な、危ない、物騒な**
 
 
 - safe
-  - 
+  - **安全な**
 
 ##### 其他
 
 - wrong
-    - 
+    - **不正で、よくなくて、悪くて、正しくない、誤った、間違った、(…に)間違っていて、不適当な、不適切な**
 
 
 - strict
-  - 
+  - **厳しい、厳格な**
 - correct
-  - 
+  - **(事実に合致して)正しい、間違いのない、正確な**
 - proper
-  - 
+  - **(目的・状況などにかなって)適切な、ふさわしい、ちゃんとした、(…に)適切な**
 - lucky
-  - 
+  - **運のよい、幸運な**
 - fair
-  - 
+  - **公正な、公平な、正当な、(…に)公平で、適正な**
 - successful
-  - 
+  - **成功した、上出来の**
 
 #### 综合属性
 
 ##### 品质（好）
 
 - good
-    - 
+    - **(品質・内容・外観など)良い、優秀な、見事な**
 
 
 - nice
-  - 
+  - **かわいい、魅力のある、おいしい、見事な**
 - fine
-  - 
+  - **すばらしい、見事な、りっぱな、(技能の)優れた、優秀な**
 - great
-  - 
+  - **(規模・程度など)大きい、大…**
+  - **名高い、著名な**
 - perfect
-  - 
+  - **完全な、申し分のない、理想的な**
 - wonderful
-  - 
+  - **すばらしい、すてきな、不思議な、驚くべき、驚嘆すべき**
 - amazing
   - **驚くべき、びっくりするような、すばらしい**
 - excellent
@@ -3393,162 +3417,168 @@
 ##### 真实性
 
 - real
-    - 
+    - **真の、本当の**
 
 
 - true
-  - 
+  - **真実の、本当の、本来の**
 - false
-  - 
+  - **間違った、誤った**
 - fake
-  - 
+  - **(だます目的で)偽造する**
 
 ##### 完整性
 
 - complete
-  - 
+  - **全部の、完璧(かんぺき)な、(…を)完備して、完全な**
 
 ##### 精确性
 
 - exact
-    - 
+    - **正確な、きっかりの、ちょうどの**
 
 
 - specific
-  - 
+  - **明確な、具体的な、特定の**
 
 ##### 复杂性
 
 - complicated
-    - 
+    - **複雑な**
+    - **わかりにくい**
 
 
 - simple
-  - 
+  - **簡単な**
 
 ##### 其他
 
 - fun
-    - 
+    - **おもしろさ、おもしろいこと**
 
 
 - horrible
-  - 
+  - **恐ろしい、ものすごい**
 - weird
-  - 
+  - **変な、奇妙な**
+  - **おかしい**
 - strange
-  - 
+  - **奇妙な、不思議な、変な**
 - comfortable
-  - 
+  - **快適な、気持ちのよい**
 - incredible
-  - 
+  - **信じられない、信用できない、驚くべき**
 - gross
-  - 
+  - **総体の、全体の**
 
 #### 事物关系
 
 ##### 特殊性
 
 - special
-    - 
+    - **特別の、特殊の、独特の、特有の**
+    - **専用の、個人用の、専門の、専攻の、特別用の**
 
 
 - regular
-  - 
+  - **規則正しい、規則的な**
 
-
-一致性
+##### 一致性
 
 - same
-    - 
+    - **同じ**
 
 
 - different
-  - 
+  - **異なった、違った、別の、同じでない**
 
-
-普遍性
+##### 普遍性
 
 - typical
-    - 
+    - **典型的な、代表的な**
 
 
 - normal
-  - 
+  - **一般の**
+  - **一般的な**
 - common
-  - 
+  - **共通の、共同の、共有の、(…に)共通して**
 - general
-  - 
+  - **一般の**
+  - **一般的な**
 - popular
-  - 
+  - **人気のある、評判のよい**
 - average
-  - 
+  - **平均、平均値**
 - particular
-  - 
+  - **特にこの、特有の、独特の、個人としての、個々の、各自の、特別の、格別の**
 - own
-  - 
+  - **自分自身の、自分の、個人的な**
 
-
-重要性
+##### 重要性
 
 - serious
-    - 
+    - **まじめな、本気の、真剣な**
 
 
 - causal
-  - 
+  - **原因の、原因となる、因果関係の、原因を示す**
 - important
-  - 
+  - **重要な、重大な、大切な**
 - main
-  - 
+  - **主な、主要な**
 - formal
-  - 
+  - **正式の、公式の**
 - professional
-  - 
+  - **専門的な、プロ(級)の**
 
-
-必要性
+##### 必要性
 
 - necessary
-  - 
+  - **必要な**
 
-关联性
+##### 关联性
 
 - free
-    - 
+    - **自由な**
 
 
 - relative
-  - 
+  - **比較上の**
 - legal
-  - 
+  - **法律(上)の**
 - physical
-  - 
+  - **物質(的)の、物理学(上)の**
 - mental
-  - 
+  - **心の、精神(的)の**
 - local
-  - 
+  - **地方の、地元の**
 - native
   - 
 - international
-  - 
+  - **国際(上)の、国際間の、国際的な**
 - cheap
-  - 
+  - **安い、安価な**
 - expensive
-  - 
+  - **高価な、費用のかかる**
 - separate
-  - 
+  - **離す、切り離す、引き離す、(…を)切り離す、分離する、(…を)分けている、隔てている、(…を)(…に)分ける、区切る、(…を)分散する**
 - public
-  - 
+  - **公共の、公開の**
 - worth
-  - 
+  - **の価値があって、値して、価値があって**
 
-
+```java
 关于形容词的解读
 
 总单词量：208个
 
 类别：47个
+```
+
+
+
+---
 
 
 
@@ -3559,29 +3589,29 @@
 ##### 轨迹
 
 - across
-    - 
+    - **…を横切って、…を渡って、…に渡して**
 
 
 - along
   - **…に沿って**
 - past
-  - 
+  - **過ぎ去った、昔の、過ぎ去って、終わって、過ぎたばかりの、任期を終わった、元の、過去の**
 - over
   - **…を越えて**
 - up
-  - 
+  - **上のほうへ、上へ**
 - down
-  - 
+  - **低いほうへ、下へ**
 - through
-  - 
+  - **…を通って**
 - on
-  - 
+  - **…の表面に、…の上に、…に、…にくっつけて、…の身につけて、…で、…を軸にして、にかけて、…に接して、…に面して**
 - off
-  - 
+  - **から(離れて、隔たって)、…を離れて**
 - in
-  - 
+  - **…の中に、…において、…で、に乗って、…に**
 - out
-  - 
+  - **外に、外部に、(外に)出て**
 - against
   - **…に反対して**
 
@@ -3632,15 +3662,15 @@
 ##### 点与平面
 
 - beyond
-    - 
+    - **…の向こうに、…を越えて、…を過ぎて、…の範囲を越えて、…以上に**
 
 
 - under
-  - 
+  - **…の下に**
 - above
-  - 
+  - **…より上に、…より高く、…の上に**
 - below
-  - 
+  - **…より下に**
 
 ##### 点与空间
 
@@ -3714,7 +3744,7 @@
 
 
 - per
-  - 
+  - **…につき、…ごとに、…で、…によって**
 
 ```java
 关于介词的解读
@@ -3725,6 +3755,8 @@
 ```
 
 
+
+---
 
 
 
@@ -4026,13 +4058,13 @@
 - he
   - **彼は、あの人は、その人**
 - she
-  - 
+  - **彼女は**
 - we
-  - 
+  - **我々は、私たちは**
 - they
-  - 
+  - **彼らは、あれらは、それらは**
 - it
-  - 
+  - **それは、それを、それに**
 
 ##### 疑问代词
 
@@ -4046,11 +4078,11 @@
 ##### 冠词
 
 - a
-    - 
+    - **イ調**
 
 
 - an
-  - 
+  - **イ調**
 - the
 
   - **その**
@@ -4059,69 +4091,52 @@
 ##### 感叹词
 
 - bye
-    - 
+    - **バイ**
 
 
 - hello
-  - 
+  - **こんにちは!、もしもし!**
 - no
-  - 
+  - **反対、禁止**
 - yes
-  - 
+  - **はい**
 - pardon
-  - 
+  - **許し、容赦**
 - please
-  - 
+  
+  - **ください**
+  
 - wow
-  - 
 - damn
 
-  - 
 
 
 ##### 缩略词
 
 - Mr.
-    - 
 
 
 - Ms.
-  - 
 
 ##### 数词
 
 - zero
-    - 
 
 
 - one
-  - 
 - two
-  - 
 - three
-  - 
 - four
-  - 
 - five
-  - 
 - six
-  - 
 - seven
-  - 
 - eight
-  - 
 - nine
-  - 
 - ten
-  - 
 - hundred
-  - 
 - thousand
-  - 
 - million
-  - 
 - billion
-  - 
 
 ```java
 关于副词及其他词的解读
