--- a/计算机科学/找工作/算法题/【前缀和问题分类汇总】.md
+++ b/计算机科学/找工作/算法题/【前缀和问题分类汇总】.md
@@ -4,6 +4,12 @@
 
 
 
+- 二维
+
+![img](https://tva1.sinaimg.cn/large/e6c9d24egy1h65asaq93bj20zk0k0gmg.jpg)
+
+
+
 #### 基础前缀和
 
 | 题目                                                         | 备注                                                         |
