--- a/计算机科学/找工作/算法题/【差分数组】.md
+++ b/计算机科学/找工作/算法题/【差分数组】.md
@@ -1,3 +1,7 @@
+[TOC]
+
+
+
 读完本文，你不仅学会了算法套路，还可以顺便解决如下题目：
 
 | 牛客 |                           LeetCode                           |                             力扣                             | 难度 |
